[package]
name = "specify-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Spec-format parser (baseline + delta) for Specify"
categories = ["development-tools", "parser-implementations"]
keywords = ["specify", "spec", "parser"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
