[package]
name = "specify-lints"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Specify standards layer (rules + lint): rule parser, resolver, review-finding validators, and lint indexer"
categories = ["development-tools"]
keywords = ["specify", "lint", "rules"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
glob.workspace = true
ignore.workspace = true
jsonschema.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true
sha2.workspace = true
specify-error.workspace = true
specify-schema.workspace = true
specify-tool.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
