[package]
name = "specify-standards"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Specify standards layer: rule parser, resolver, and lint engine"
categories = ["development-tools"]
keywords = ["specify", "standards", "rules"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
glob.workspace = true
ignore.workspace = true
jsonschema.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
serde_json.workspace = true
specify-diagnostics.workspace = true
specify-error.workspace = true
specify-schema.workspace = true
specify-digest.workspace = true
thiserror.workspace = true
toml.workspace = true
[dev-dependencies]
tempfile.workspace = true
